[project]
name = "unitree_sdk2py"
version = "1.0.1"
description = "Unitree robot sdk version 2 for python"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "UnitreeRobotics", email = "unitree@unitree.com" }
]

dependencies = [
  "fastcrc>=0.3.2",
  "numpy",
  "opencv-python",
  "cyclonedds"
]

[project.urls]
"Source Code" = "https://github.com/unitreerobotics/unitree_sdk2_python"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["unitree_sdk2py", "unitree_sdk2py.*"]